<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".MainActivity"
    android:gravity="top"
    android:orientation="vertical"
    android:background="@color/white">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Movie_Name"
        android:text="" />



    <LinearLayout
        android:id="@+id/linearlay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Year"
            android:inputType="number"
            android:text="" />

        <EditText
            android:id="@+id/duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/Duration"
            android:inputType="number"
            android:text="" />

    </LinearLayout>

    <RatingBar
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:clickable="true" />

    <EditText
        android:id="@+id/Review"
        android:layout_width="match_parent"
        android:layout_height="205dp"
        android:layout_weight="0.2"
        android:gravity="top"
        android:hint="@string/Review"
        android:text="" />

    <EditText
        android:id="@+id/stars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/Starring"
        android:text="" />

   <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/direct"
        android:text=""
        android:hint="@string/Director"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/save"
        android:text="@string/Save"

        />



</LinearLayout>